<resources>
    <string name="app_name">RestaurantUAS</string>
    <string name="signIn">SIGN IN</string>
    <string name="splash_desc">Splash Screen Description</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoid2hpdGVydWJ5MyIsImEiOiJja2k3ZWMweWowa2VwMzBtd2h5cWcydzlkIn0.ynviOUl0m0Jg70O1i2KOTQ</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="hintEmail">EMAIL</string>
    <string name="hintPassword">PASSWORD</string>
    <string name="hintForgot">Forgot Password?</string>
    <string name="hintFirst">NAME</string>
    <string name="hintPhone">PHONE NUMBER</string>

    <string name="show_list_title">Show List User</string>
    <string name="create_title">Create User</string>
    <string name="search_hint">Search User</string>
    <string name="edit_title">Edit User</string>

    <string name="show_list_product">Show List Product</string>
    <string name="create_product">Create Product</string>
    <string name="search_Product">Search Product</string>
    <string name="edit_produt">Edit Product</string>

    <string name="Menu">Menu Makanan</string>

    <string name="SignIn">SIGN IN</string>
    <string name="SignUp">Belum Punya Akun? SIGN UP</string>
    <string name="register">REGISTER</string>
    <string name="logout">LOGOUT</string>
    <string name="update">UPDATE</string>

    <string name="titleFragmentHome">Home</string>
    <string name="titleFragmentPesanan">Pesanan</string>
    <string name="titleFragmentFavorite">Favoritku</string>
    <string name="titleFragmentProfile">Profile</string>
    <string name="titleFragmentMap">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>